sites/all/themes/heybabies/sass/_main.scss
/* ... */
.breadcrumbs
{
    list-style: none;
    float: left;
    
    li
    {
        display: inline-block;
        font-size: 0.777em;
        line-height: 1;
        margin-right: 8px;
        padding-right: 8px;
        border-right: 1px solid $seafoam;
        font-weight: 500;
    }
    .last
    {
        margin-right: 0;
        padding-right: 0;
        border-right: 0;
    }
    a
    {
        color: $seafoam;
        text-decoration: none;
        
        &:hover
        {
            text-decoration: underline;
        }
    }
}
.node-type-product
{
    .title
    {
        display: none;
    }
    .block.block-system-main
    {
        padding-top: 0;
    }
    .breadcrumbs
    {
        padding-bottom: 60px;
    }
    .social-share
    {
        float: right;
    }
    .fb-share-button
    {
        display: inline-block;
        vertical-align: top;
        height: 20px;
    }
}
.view-product-node
{
    clear: both;
    
    .views-field-field-image
    {
        float: left;
        width: 52px;
        margin-right: 8px;
        
        li
        {
            width: 50px;
            border: 1px solid #f2f2f2;
            border-radius: 2px;
            margin: 0 0 7px 0;
            cursor: pointer;
        }
        .slick-current
        {
            border-color: $seafoam;
        }
        
        img
        {
            margin: 0 auto;
        }
    }
    
    .views-field-field-image-1
    {
        float: right;
        width: 520px;
        position: relative;
        margin-right: 20px;
        
        li
        {
            margin: 0;
        }
        img
        {
            margin: 0 auto;
            max-width: 100%;
            max-height: 620px;
            height: auto;
        }
        
        .cover
        {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            cursor: pointer;
            
            &:hover .click-to-zoom
            {
                display: block;
            }
        }
        .click-to-zoom
        {
            display: none;
            text-align: center;
            background: white;
            padding: 0.5em 0;
            cursor: pointer;
            color: black;
            opacity: 0.7;
        }
    }
    
    .views-field-title
    {
        text-transform: lowercase;
        color: $seafoam;
        line-height: 0.9;
        padding-bottom: 12px;
        
        h1
        {
            font-size: 2.5em;
        }
    }
    .views-label
    {
        color: $seafoam;
    }
    .views-field-commerce-price
    {
        color: $seafoam;
        font-weight: bold;
        font-size: 1.222em;
        display: inline-block;
        margin-bottom: 12px;
    }
    .views-field-field-retail-price
    {
        color: $seafoam;
        display: inline-block;
        margin-left: 12px;
        padding-left: 12px;
        border-left: 1px solid $seafoam;
    }
    .views-field-field-description
    {
        padding: 12px 0;
        line-height: 1.2;
    }
    .views-field-add-to-cart-form
    {
        .form-submit
        {
            background: $seafoam;
            color: white;
            border: 0;
            -webkit-appearance: none;
            border-radius: 4px;
            font-size: 1em;
            width: 260px;
            line-height: 48px;
            cursor: pointer;
            outline-color: $seafoam;
            transition: background 0.2s;
            
            &:hover
            {
                background: #8ac5ab;
            }
        }
        .out-of-stock .form-submit
        {
            background: #ccc;
            color: #6e6e6e;
            cursor: default;
            
            &:hover
            {
                background: #ccc;
            }
        }
    }
    .details-container
    {
        width: 340px;
        float: right;
    }
}
/* ... */

